--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,6 @@ services:
 
 before_install:
   - docker build -t paakcmd/docker-react -f Dockerfile.dev .
-  -
+
+script:
+  - docker run paakcmd/docker-react npm run test -- --coverage
